--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,3 +8,9 @@ default-target = "x86_64-unknown-none"
 
 [dependencies]
 bootloader_api = "0.11.3"
+noto-sans-mono-bitmap = "0.2.0"
+spin = "0.5.2"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
