--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#boot = { path = "../boot", artifact = "bin"}
+# boot = { path = "../boot", artifact = "bin"}
+regex = "1.7.3"
