--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,6 +10,8 @@ default-target = "x86_64-unknown-none"
 bootloader_api = "0.11.3"
 noto-sans-mono-bitmap = "0.2.0"
 spin = "0.5.2"
+x86_64 = "0.14.10"
+uart_16550 = "0.2.18"
 
 [dependencies.lazy_static]
 version = "1.0"
