--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,6 +12,7 @@ noto-sans-mono-bitmap = "0.2.0"
 spin = "0.5.2"
 x86_64 = "0.14.10"
 uart_16550 = "0.2.18"
+volatile = "0.4.6"
 
 [dependencies.lazy_static]
 version = "1.0"
@@ -20,4 +21,8 @@ features = ["spin_no_std"]
 
 [[test]]
 name = "should_panic"
+harness = false
+
+[[test]]
+name = "stack_overflow"
 harness = false
